tests/snapshots/files__pull_out_small-optimize-sequential.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
  c1_: int = const 0;
  v2_: bool = lt c1_ v0;
  c3_: int = const 5;
  v4_: int = mul c3_ v0;
  br v2_ .b5_ .b6_;
.b5_:
  c7_: int = const 20;
  print c7_;
  v8_: int = id v4_;
  print v8_;
  ret;
  jmp .b9_;
.b6_:
  c10_: int = const 20;
  print c10_;
  v8_: int = id v4_;
  print v8_;
  ret;
.b9_:
}
