tests/snapshots/files__pure-optimize.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 20
@main(v0: int) {
  print v0;
  ret;
}
