tests/snapshots/files__queens-func_structured.snap
---
source: tests/files.rs
expression: "format!(\"{}\", structured)"
---
queen {
block:
 block:
  block:
   one: int = const 1;
   ite: int = id one;
   ret_cond: bool = eq n queens;
   if ret_cond:
    break 2
   else:
    break 1
  while true:
   block:
    block:
     for_cond_0: bool = le ite queens;
     if for_cond_0:
      break 2
     else:
      break 1

    return icount
   block:
    block:
     nptr: ptr<int> = ptradd site n;
     store nptr ite;
     is_valid: bool = lt one one;
     if is_valid:
      break 1
     else:
      break 2
    n_1: int = add n one;
    icount: int = call @queen n_1 queens icount site;
    break 0
   ite: int = add ite one;
   break 0
 icount: int = add icount one;
 return icount

}
