tests/snapshots/files__quickselect_small-optimize-no-ctx.snap
---
source: tests/files.rs
expression: visualization.result
---
# ARGS: 3650000
@pack(v0: int, v1: int, v2: int, v3: int, v4: int, v5: int, v6: int): ptr<int> {
  v7_: ptr<int> = alloc v0;
  c8_: int = const 5;
  v9_: ptr<int> = ptradd v7_ c8_;
  c10_: int = const 4;
  v11_: ptr<int> = ptradd v7_ c10_;
  c12_: int = const 3;
  v13_: ptr<int> = ptradd v7_ c12_;
  c14_: int = const 2;
  v15_: ptr<int> = ptradd v7_ c14_;
  c16_: int = const 1;
  v17_: ptr<int> = ptradd v7_ c16_;
  c18_: int = const 0;
  v19_: ptr<int> = ptradd v7_ c18_;
  store v19_ v1;
  store v17_ v2;
  store v15_ v3;
  store v13_ v4;
  store v11_ v5;
  store v9_ v6;
  ret v7_;
}
@print_array(v0: ptr<int>, v1: int): int {
  c2_: int = const 0;
  v3_: bool = lt c2_ v1;
  c4_: int = const 1;
  v5_: int = id c2_;
  v6_: int = id c2_;
  v7_: int = id c4_;
  v8_: ptr<int> = id v0;
  v9_: int = id v1;
  br v3_ .b10_ .b11_;
.b10_:
  v12_: int = id c2_;
  v13_: int = id c2_;
  v14_: int = id c4_;
  v15_: ptr<int> = id v0;
  v16_: int = id v1;
.b17_:
  v18_: ptr<int> = ptradd v15_ v13_;
  v19_: int = load v18_;
  v20_: int = mul v13_ v19_;
  v21_: int = add v12_ v20_;
  v22_: int = add v13_ v14_;
  v23_: bool = lt v22_ v16_;
  v12_: int = id v21_;
  v13_: int = id v22_;
  v24_: int = id v14_;
  v25_: ptr<int> = id v15_;
  v26_: int = id v16_;
  v14_: int = id v24_;
  v15_: ptr<int> = id v25_;
  v16_: int = id v26_;
  br v23_ .b17_ .b27_;
.b27_:
  v5_: int = id v12_;
  v6_: int = id v13_;
  v7_: int = id v14_;
  v8_: ptr<int> = id v15_;
  v9_: int = id v16_;
  ret v5_;
  jmp .b28_;
.b11_:
  ret v5_;
.b28_:
}
@partition(v0: ptr<int>, v1: int, v2: int): int {
  v3_: bool = lt v1 v2;
  v4_: ptr<int> = ptradd v0 v2;
  v5_: int = load v4_;
  c6_: int = const 1;
  v7_: int = id v1;
  v8_: ptr<int> = id v4_;
  v9_: int = id v5_;
  v10_: ptr<int> = id v0;
  v11_: int = id v1;
  v12_: int = id c6_;
  v13_: int = id v2;
  br v3_ .b14_ .b15_;
.b14_:
  v16_: int = id v1;
  v17_: ptr<int> = id v4_;
  v18_: int = id v5_;
  v19_: ptr<int> = id v0;
  v20_: int = id v1;
  v21_: int = id c6_;
  v22_: int = id v2;
.b23_:
  v24_: ptr<int> = ptradd v19_ v20_;
  v25_: int = load v24_;
  v26_: bool = le v25_ v18_;
  v27_: int = id v16_;
  v28_: ptr<int> = id v17_;
  v29_: int = id v18_;
  v30_: ptr<int> = id v19_;
  v31_: int = id v20_;
  v32_: int = id v21_;
  v33_: int = id v22_;
  br v26_ .b34_ .b35_;
.b34_:
  v36_: ptr<int> = ptradd v19_ v16_;
  v37_: int = load v36_;
  store v24_ v37_;
  store v36_ v25_;
  v38_: int = add v16_ v21_;
  v27_: int = id v38_;
  v28_: ptr<int> = id v17_;
  v29_: int = id v18_;
  v30_: ptr<int> = id v19_;
  v31_: int = id v20_;
  v32_: int = id v21_;
  v33_: int = id v22_;
.b35_:
  v39_: int = add v20_ v21_;
  v40_: bool = lt v39_ v22_;
  v16_: int = id v27_;
  v41_: ptr<int> = id v17_;
  v42_: int = id v18_;
  v43_: ptr<int> = id v19_;
  v20_: int = id v39_;
  v44_: int = id v21_;
  v45_: int = id v22_;
  v17_: ptr<int> = id v41_;
  v18_: int = id v42_;
  v19_: ptr<int> = id v43_;
  v21_: int = id v44_;
  v22_: int = id v45_;
  br v40_ .b23_ .b46_;
.b46_:
  v7_: int = id v16_;
  v8_: ptr<int> = id v17_;
  v9_: int = id v18_;
  v10_: ptr<int> = id v19_;
  v11_: int = id v20_;
  v12_: int = id v21_;
  v13_: int = id v22_;
  v47_: ptr<int> = ptradd v10_ v7_;
  v48_: int = load v47_;
  store v47_ v5_;
  store v8_ v48_;
  ret v7_;
  jmp .b49_;
.b15_:
  v47_: ptr<int> = ptradd v10_ v7_;
  v48_: int = load v47_;
  store v47_ v5_;
  store v8_ v48_;
  ret v7_;
.b49_:
}
@quickselect(v0: ptr<int>, v1: int, v2: int, v3: int): int {
  v4_: bool = lt v1 v2;
  v5_: ptr<int> = ptradd v0 v2;
  v6_: int = load v5_;
  c7_: int = const 1;
  v8_: int = id v1;
  v9_: ptr<int> = id v5_;
  v10_: int = id v6_;
  v11_: ptr<int> = id v0;
  v12_: int = id v1;
  v13_: int = id c7_;
  v14_: int = id v2;
  br v4_ .b15_ .b16_;
.b15_:
  v17_: int = id v1;
  v18_: ptr<int> = id v5_;
  v19_: int = id v6_;
  v20_: ptr<int> = id v0;
  v21_: int = id v1;
  v22_: int = id c7_;
  v23_: int = id v2;
.b24_:
  v25_: ptr<int> = ptradd v20_ v21_;
  v26_: int = load v25_;
  v27_: bool = le v26_ v19_;
  v28_: int = id v17_;
  v29_: ptr<int> = id v18_;
  v30_: int = id v19_;
  v31_: ptr<int> = id v20_;
  v32_: int = id v21_;
  v33_: int = id v22_;
  v34_: int = id v23_;
  br v27_ .b35_ .b36_;
.b35_:
  v37_: ptr<int> = ptradd v20_ v17_;
  v38_: int = load v37_;
  store v25_ v38_;
  store v37_ v26_;
  v39_: int = add v17_ v22_;
  v28_: int = id v39_;
  v29_: ptr<int> = id v18_;
  v30_: int = id v19_;
  v31_: ptr<int> = id v20_;
  v32_: int = id v21_;
  v33_: int = id v22_;
  v34_: int = id v23_;
.b36_:
  v40_: int = add v21_ v22_;
  v41_: bool = lt v40_ v23_;
  v17_: int = id v28_;
  v42_: ptr<int> = id v18_;
  v43_: int = id v19_;
  v44_: ptr<int> = id v20_;
  v21_: int = id v40_;
  v45_: int = id v22_;
  v46_: int = id v23_;
  v18_: ptr<int> = id v42_;
  v19_: int = id v43_;
  v20_: ptr<int> = id v44_;
  v22_: int = id v45_;
  v23_: int = id v46_;
  br v41_ .b24_ .b47_;
.b47_:
  v8_: int = id v17_;
  v9_: ptr<int> = id v18_;
  v10_: int = id v19_;
  v11_: ptr<int> = id v20_;
  v12_: int = id v21_;
  v13_: int = id v22_;
  v14_: int = id v23_;
.b16_:
  v48_: int = sub v8_ v1;
  v49_: int = sub v3 c7_;
  v50_: bool = eq v48_ v49_;
  v51_: ptr<int> = ptradd v11_ v8_;
  v52_: int = load v51_;
  store v51_ v6_;
  store v9_ v52_;
  br v50_ .b53_ .b54_;
.b53_:
  v55_: ptr<int> = ptradd v0 v8_;
  v56_: int = load v55_;
  v57_: int = id v56_;
  ret v57_;
  jmp .b58_;
.b54_:
  v59_: bool = lt v49_ v48_;
  br v59_ .b60_ .b61_;
.b60_:
  c62_: int = const 1;
  v63_: int = sub v3 c62_;
  v64_: int = sub v8_ c7_;
  v65_: bool = lt v1 v64_;
  v66_: ptr<int> = ptradd v0 v64_;
  v67_: int = load v66_;
  v68_: int = id v1;
  v69_: ptr<int> = id v66_;
  v70_: int = id v67_;
  v71_: ptr<int> = id v0;
  v72_: int = id v1;
  v73_: int = id c62_;
  v74_: int = id v64_;
  br v65_ .b75_ .b76_;
.b75_:
  v77_: int = id v1;
  v78_: ptr<int> = id v66_;
  v79_: int = id v67_;
  v80_: ptr<int> = id v0;
  v81_: int = id v1;
  v82_: int = id c62_;
  v83_: int = id v64_;
.b84_:
  v85_: ptr<int> = ptradd v80_ v81_;
  v86_: int = load v85_;
  v87_: bool = le v86_ v79_;
  v88_: int = id v77_;
  v89_: ptr<int> = id v78_;
  v90_: int = id v79_;
  v91_: ptr<int> = id v80_;
  v92_: int = id v81_;
  v93_: int = id v82_;
  v94_: int = id v83_;
  br v87_ .b95_ .b96_;
.b95_:
  v97_: ptr<int> = ptradd v80_ v77_;
  v98_: int = load v97_;
  store v85_ v98_;
  store v97_ v86_;
  v99_: int = add v77_ v82_;
  v88_: int = id v99_;
  v89_: ptr<int> = id v78_;
  v90_: int = id v79_;
  v91_: ptr<int> = id v80_;
  v92_: int = id v81_;
  v93_: int = id v82_;
  v94_: int = id v83_;
.b96_:
  v100_: int = add v81_ v82_;
  v101_: bool = lt v100_ v83_;
  v77_: int = id v88_;
  v102_: ptr<int> = id v78_;
  v103_: int = id v79_;
  v104_: ptr<int> = id v80_;
  v81_: int = id v100_;
  v105_: int = id v82_;
  v106_: int = id v83_;
  v78_: ptr<int> = id v102_;
  v79_: int = id v103_;
  v80_: ptr<int> = id v104_;
  v82_: int = id v105_;
  v83_: int = id v106_;
  br v101_ .b84_ .b107_;
.b107_:
  v68_: int = id v77_;
  v69_: ptr<int> = id v78_;
  v70_: int = id v79_;
  v71_: ptr<int> = id v80_;
  v72_: int = id v81_;
  v73_: int = id v82_;
  v74_: int = id v83_;
.b76_:
  v108_: int = sub v68_ v1;
  v109_: bool = eq v108_ v63_;
  v110_: ptr<int> = ptradd v71_ v68_;
  v111_: int = load v110_;
  store v110_ v67_;
  store v69_ v111_;
  br v109_ .b112_ .b113_;
.b112_:
  v114_: ptr<int> = ptradd v0 v68_;
  v115_: int = load v114_;
  v116_: int = id v115_;
  v117_: int = id v116_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b113_:
  v118_: bool = lt v63_ v108_;
  br v118_ .b119_ .b120_;
.b119_:
  v121_: int = sub v68_ c62_;
  v122_: int = call @partition v0 v1 v121_;
  v123_: int = sub v122_ v1;
  c124_: int = const 1;
  v125_: int = sub v3 c124_;
  v126_: bool = eq v123_ v125_;
  br v126_ .b127_ .b128_;
.b127_:
  v129_: ptr<int> = ptradd v0 v122_;
  v130_: int = load v129_;
  v131_: int = id v130_;
  v132_: int = id v131_;
  v116_: int = id v132_;
  v117_: int = id v116_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b128_:
  v133_: bool = lt v125_ v123_;
  br v133_ .b134_ .b135_;
.b134_:
  v136_: int = sub v122_ c124_;
  v137_: int = call @quickselect v0 v1 v136_ v3;
  v138_: int = id v137_;
  v131_: int = id v138_;
  v132_: int = id v131_;
  v116_: int = id v132_;
  v117_: int = id v116_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b135_:
  v139_: int = add c124_ v122_;
  v140_: int = sub v1 v122_;
  v141_: int = sub v3 c124_;
  v142_: int = add v140_ v141_;
  v143_: int = call @quickselect v0 v139_ v121_ v142_;
  v138_: int = id v143_;
  v131_: int = id v138_;
  v132_: int = id v131_;
  v116_: int = id v132_;
  v117_: int = id v116_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b120_:
  v144_: int = add c62_ v68_;
  v145_: int = call @partition v0 v144_ v64_;
  v146_: int = sub v145_ v144_;
  v147_: int = sub v3 v68_;
  v148_: int = sub v1 c62_;
  v149_: int = add v147_ v148_;
  c150_: int = const 1;
  v151_: int = sub v149_ c150_;
  v152_: bool = eq v146_ v151_;
  br v152_ .b153_ .b154_;
.b153_:
  v155_: ptr<int> = ptradd v0 v145_;
  v156_: int = load v155_;
  v157_: int = id v156_;
  v132_: int = id v157_;
  v116_: int = id v132_;
  v117_: int = id v116_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b154_:
  v158_: bool = lt v151_ v146_;
  br v158_ .b159_ .b160_;
.b159_:
  v161_: int = sub v145_ c150_;
  v162_: int = call @quickselect v0 v144_ v161_ v149_;
  v163_: int = id v162_;
  v157_: int = id v163_;
  v132_: int = id v157_;
  v116_: int = id v132_;
  v117_: int = id v116_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b160_:
  v164_: int = add c150_ v145_;
  v165_: int = sub v144_ v145_;
  v166_: int = sub v149_ c150_;
  v167_: int = add v165_ v166_;
  v168_: int = call @quickselect v0 v164_ v64_ v167_;
  v163_: int = id v168_;
  v157_: int = id v163_;
  v132_: int = id v157_;
  v116_: int = id v132_;
  v117_: int = id v116_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b61_:
  v169_: int = sub v3 v8_;
  v170_: int = sub v1 c7_;
  v171_: int = add v169_ v170_;
  c172_: int = const 1;
  v173_: int = sub v171_ c172_;
  v174_: int = add c7_ v8_;
  v175_: bool = lt v174_ v2;
  v176_: ptr<int> = ptradd v0 v2;
  v177_: int = load v176_;
  v178_: int = id v174_;
  v179_: ptr<int> = id v176_;
  v180_: int = id v177_;
  v181_: ptr<int> = id v0;
  v182_: int = id v174_;
  v183_: int = id c172_;
  v184_: int = id v2;
  br v175_ .b185_ .b186_;
.b185_:
  v187_: int = id v174_;
  v188_: ptr<int> = id v176_;
  v189_: int = id v177_;
  v190_: ptr<int> = id v0;
  v191_: int = id v174_;
  v192_: int = id c172_;
  v193_: int = id v2;
.b194_:
  v195_: ptr<int> = ptradd v190_ v191_;
  v196_: int = load v195_;
  v197_: bool = le v196_ v189_;
  v198_: int = id v187_;
  v199_: ptr<int> = id v188_;
  v200_: int = id v189_;
  v201_: ptr<int> = id v190_;
  v202_: int = id v191_;
  v203_: int = id v192_;
  v204_: int = id v193_;
  br v197_ .b205_ .b206_;
.b205_:
  v207_: ptr<int> = ptradd v190_ v187_;
  v208_: int = load v207_;
  store v195_ v208_;
  store v207_ v196_;
  v209_: int = add v187_ v192_;
  v198_: int = id v209_;
  v199_: ptr<int> = id v188_;
  v200_: int = id v189_;
  v201_: ptr<int> = id v190_;
  v202_: int = id v191_;
  v203_: int = id v192_;
  v204_: int = id v193_;
.b206_:
  v210_: int = add v191_ v192_;
  v211_: bool = lt v210_ v193_;
  v187_: int = id v198_;
  v212_: ptr<int> = id v188_;
  v213_: int = id v189_;
  v214_: ptr<int> = id v190_;
  v191_: int = id v210_;
  v215_: int = id v192_;
  v216_: int = id v193_;
  v188_: ptr<int> = id v212_;
  v189_: int = id v213_;
  v190_: ptr<int> = id v214_;
  v192_: int = id v215_;
  v193_: int = id v216_;
  br v211_ .b194_ .b217_;
.b217_:
  v178_: int = id v187_;
  v179_: ptr<int> = id v188_;
  v180_: int = id v189_;
  v181_: ptr<int> = id v190_;
  v182_: int = id v191_;
  v183_: int = id v192_;
  v184_: int = id v193_;
.b186_:
  v218_: int = sub v178_ v174_;
  v219_: bool = eq v173_ v218_;
  v220_: ptr<int> = ptradd v181_ v178_;
  v221_: int = load v220_;
  store v220_ v177_;
  store v179_ v221_;
  br v219_ .b222_ .b223_;
.b222_:
  v224_: ptr<int> = ptradd v0 v178_;
  v225_: int = load v224_;
  v226_: int = id v225_;
  v117_: int = id v226_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b223_:
  v227_: bool = lt v173_ v218_;
  br v227_ .b228_ .b229_;
.b228_:
  v230_: int = sub v178_ c172_;
  v231_: int = call @partition v0 v174_ v230_;
  v232_: int = sub v231_ v174_;
  c233_: int = const 1;
  v234_: int = sub v171_ c233_;
  v235_: bool = eq v232_ v234_;
  br v235_ .b236_ .b237_;
.b236_:
  v238_: ptr<int> = ptradd v0 v231_;
  v239_: int = load v238_;
  v240_: int = id v239_;
  v241_: int = id v240_;
  v226_: int = id v241_;
  v117_: int = id v226_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b237_:
  v242_: bool = lt v234_ v232_;
  br v242_ .b243_ .b244_;
.b243_:
  v245_: int = sub v231_ c233_;
  v246_: int = call @quickselect v0 v174_ v245_ v171_;
  v247_: int = id v246_;
  v240_: int = id v247_;
  v241_: int = id v240_;
  v226_: int = id v241_;
  v117_: int = id v226_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b244_:
  v248_: int = add c233_ v231_;
  v249_: int = sub v174_ v231_;
  v250_: int = sub v171_ c233_;
  v251_: int = add v249_ v250_;
  v252_: int = call @quickselect v0 v248_ v230_ v251_;
  v247_: int = id v252_;
  v240_: int = id v247_;
  v241_: int = id v240_;
  v226_: int = id v241_;
  v117_: int = id v226_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b229_:
  v253_: int = add c172_ v178_;
  v254_: int = call @partition v0 v253_ v2;
  v255_: int = sub v254_ v253_;
  v256_: int = sub v171_ v178_;
  v257_: int = sub v174_ c172_;
  v258_: int = add v256_ v257_;
  c259_: int = const 1;
  v260_: int = sub v258_ c259_;
  v261_: bool = eq v255_ v260_;
  br v261_ .b262_ .b263_;
.b262_:
  v264_: ptr<int> = ptradd v0 v254_;
  v265_: int = load v264_;
  v266_: int = id v265_;
  v241_: int = id v266_;
  v226_: int = id v241_;
  v117_: int = id v226_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b263_:
  v267_: bool = lt v260_ v255_;
  br v267_ .b268_ .b269_;
.b268_:
  v270_: int = sub v254_ c259_;
  v271_: int = call @quickselect v0 v253_ v270_ v258_;
  v272_: int = id v271_;
  v266_: int = id v272_;
  v241_: int = id v266_;
  v226_: int = id v241_;
  v117_: int = id v226_;
  v57_: int = id v117_;
  ret v57_;
  jmp .b58_;
.b269_:
  v273_: int = add c259_ v254_;
  v274_: int = sub v253_ v254_;
  v275_: int = sub v258_ c259_;
  v276_: int = add v274_ v275_;
  v277_: int = call @quickselect v0 v273_ v2 v276_;
  v272_: int = id v277_;
  v266_: int = id v272_;
  v241_: int = id v266_;
  v226_: int = id v241_;
  v117_: int = id v226_;
  v57_: int = id v117_;
  ret v57_;
.b58_:
}
@main(v0: int) {
  c1_: int = const 6;
  v2_: ptr<int> = alloc c1_;
  c3_: int = const 5;
  v4_: ptr<int> = ptradd v2_ c3_;
  c5_: int = const 116;
  c6_: int = const 4;
  v7_: ptr<int> = ptradd v2_ c6_;
  c8_: int = const 114;
  c9_: int = const 3;
  v10_: ptr<int> = ptradd v2_ c9_;
  c11_: int = const 101;
  c12_: int = const 2;
  v13_: ptr<int> = ptradd v2_ c12_;
  c14_: int = const 98;
  c15_: int = const 1;
  v16_: ptr<int> = ptradd v2_ c15_;
  c17_: int = const 108;
  c18_: int = const 0;
  v19_: ptr<int> = ptradd v2_ c18_;
  c20_: int = const 97;
  store v19_ c20_;
  store v16_ c17_;
  store v13_ c14_;
  store v10_ c11_;
  store v7_ c8_;
  store v4_ c5_;
  v21_: int = id c18_;
  v22_: ptr<int> = id v4_;
  v23_: int = id c5_;
  v24_: ptr<int> = id v2_;
  v25_: int = id c18_;
  v26_: int = id c15_;
  v27_: int = id c3_;
.b28_:
  v29_: ptr<int> = ptradd v24_ v25_;
  v30_: int = load v29_;
  v31_: bool = le v30_ v23_;
  v32_: int = id v21_;
  v33_: ptr<int> = id v22_;
  v34_: int = id v23_;
  v35_: ptr<int> = id v24_;
  v36_: int = id v25_;
  v37_: int = id v26_;
  v38_: int = id v27_;
  br v31_ .b39_ .b40_;
.b39_:
  v41_: ptr<int> = ptradd v24_ v21_;
  v42_: int = load v41_;
  store v29_ v42_;
  store v41_ v30_;
  v43_: int = add v21_ v26_;
  v32_: int = id v43_;
  v33_: ptr<int> = id v22_;
  v34_: int = id v23_;
  v35_: ptr<int> = id v24_;
  v36_: int = id v25_;
  v37_: int = id v26_;
  v38_: int = id v27_;
.b40_:
  v44_: int = add v25_ v26_;
  v45_: bool = lt v44_ v27_;
  v21_: int = id v32_;
  v46_: ptr<int> = id v22_;
  v47_: int = id v23_;
  v48_: ptr<int> = id v24_;
  v25_: int = id v44_;
  v49_: int = id v26_;
  v50_: int = id v27_;
  v22_: ptr<int> = id v46_;
  v23_: int = id v47_;
  v24_: ptr<int> = id v48_;
  v26_: int = id v49_;
  v27_: int = id v50_;
  br v45_ .b28_ .b51_;
.b51_:
  v52_: bool = eq c9_ v21_;
  v53_: ptr<int> = ptradd v24_ v21_;
  v54_: int = load v53_;
  store v53_ c5_;
  store v22_ v54_;
  br v52_ .b55_ .b56_;
.b55_:
  v57_: ptr<int> = ptradd v2_ v21_;
  v58_: int = load v57_;
  v59_: int = id v58_;
  v60_: int = add v0 v59_;
  free v2_;
  print v60_;
  ret;
  jmp .b61_;
.b56_:
  v62_: bool = lt c9_ v21_;
  br v62_ .b63_ .b64_;
.b63_:
  v65_: int = sub v21_ c15_;
  v66_: int = call @partition v2_ c18_ v65_;
  v67_: int = sub v66_ c18_;
  c68_: int = const 1;
  v69_: int = sub c6_ c68_;
  v70_: bool = eq v67_ v69_;
  br v70_ .b71_ .b72_;
.b71_:
  v73_: ptr<int> = ptradd v2_ v66_;
  v74_: int = load v73_;
  v75_: int = id v74_;
  v76_: int = id v75_;
  v59_: int = id v76_;
  v60_: int = add v0 v59_;
  free v2_;
  print v60_;
  ret;
  jmp .b61_;
.b72_:
  v77_: bool = lt v69_ v67_;
  br v77_ .b78_ .b79_;
.b78_:
  v80_: int = sub v66_ c68_;
  v81_: int = call @quickselect v2_ c18_ v80_ c6_;
  v82_: int = id v81_;
  v75_: int = id v82_;
  v76_: int = id v75_;
  v59_: int = id v76_;
  v60_: int = add v0 v59_;
  free v2_;
  print v60_;
  ret;
  jmp .b61_;
.b79_:
  v83_: int = add c68_ v66_;
  v84_: int = sub c18_ v66_;
  v85_: int = sub c6_ c68_;
  v86_: int = add v84_ v85_;
  v87_: int = call @quickselect v2_ v83_ v65_ v86_;
  v82_: int = id v87_;
  v75_: int = id v82_;
  v76_: int = id v75_;
  v59_: int = id v76_;
  v60_: int = add v0 v59_;
  free v2_;
  print v60_;
  ret;
  jmp .b61_;
.b64_:
  v88_: int = add c15_ v21_;
  v89_: int = call @partition v2_ v88_ c3_;
  v90_: int = sub v89_ v88_;
  v91_: int = sub c6_ v21_;
  v92_: int = sub c18_ c15_;
  v93_: int = add v91_ v92_;
  c94_: int = const 1;
  v95_: int = sub v93_ c94_;
  v96_: bool = eq v90_ v95_;
  br v96_ .b97_ .b98_;
.b97_:
  v99_: ptr<int> = ptradd v2_ v89_;
  v100_: int = load v99_;
  v101_: int = id v100_;
  v76_: int = id v101_;
  v59_: int = id v76_;
  v60_: int = add v0 v59_;
  free v2_;
  print v60_;
  ret;
  jmp .b61_;
.b98_:
  v102_: bool = lt v95_ v90_;
  br v102_ .b103_ .b104_;
.b103_:
  v105_: int = sub v89_ c94_;
  v106_: int = call @quickselect v2_ v88_ v105_ v93_;
  v107_: int = id v106_;
  v101_: int = id v107_;
  v76_: int = id v101_;
  v59_: int = id v76_;
  v60_: int = add v0 v59_;
  free v2_;
  print v60_;
  ret;
  jmp .b61_;
.b104_:
  v108_: int = add c94_ v89_;
  v109_: int = sub v88_ v89_;
  v110_: int = sub v93_ c94_;
  v111_: int = add v109_ v110_;
  v112_: int = call @quickselect v2_ v108_ c3_ v111_;
  v107_: int = id v112_;
  v101_: int = id v107_;
  v76_: int = id v101_;
  v59_: int = id v76_;
  v60_: int = add v0 v59_;
  free v2_;
  print v60_;
  ret;
.b61_:
}
